ajout de gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,46 @@
 obj/
 Content/bin
 Content/obj
+obj/Debug/netcoreapp3.1/monJeu.assets.cache
+Content/bin/DesktopGL/Content/stage.ogg
+Content/bin/DesktopGL/Content/stage.ogg
+Content/obj/DesktopGL/Content/.mgcontent
+Content/obj/DesktopGL/Content/.mgstats
+Content/obj/DesktopGL/Content/coin.mgcontent
+Content/obj/DesktopGL/Content/coinsfx.mgcontent
+Content/obj/DesktopGL/Content/debug-rec.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Blue_Right.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Orange_Right.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Pink_Right.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Red_Right.mgcontent
+Content/obj/DesktopGL/Content/hitsfx.mgcontent
+Content/obj/DesktopGL/Content/Pac_Down.mgcontent
+Content/obj/DesktopGL/Content/Pac_Idle.mgcontent
+Content/obj/DesktopGL/Content/Pac_Left.mgcontent
+Content/obj/DesktopGL/Content/Pac_Right.mgcontent
+Content/obj/DesktopGL/Content/Pac_Up.mgcontent
+Content/obj/DesktopGL/Content/pacman-sprite.mgcontent
+Content/obj/DesktopGL/Content/stage.mgcontent
+Content/obj/DesktopGL/Content/TestFont.mgcontent
+obj/Debug/netcoreapp3.1/monJeu.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/netcoreapp3.1/monJeu.assets.cache
+Content/obj/DesktopGL/Content/WallPac.mgcontent
+Content/obj/DesktopGL/Content/TestFont.mgcontent
+Content/obj/DesktopGL/Content/stage.mgcontent
+Content/obj/DesktopGL/Content/pacman-sprite.mgcontent
+Content/obj/DesktopGL/Content/Pac_Up.mgcontent
+Content/obj/DesktopGL/Content/Pac_Right.mgcontent
+Content/obj/DesktopGL/Content/Pac_Left.mgcontent
+Content/obj/DesktopGL/Content/Pac_Idle.mgcontent
+Content/obj/DesktopGL/Content/Pac_Down.mgcontent
+Content/obj/DesktopGL/Content/hitsfx.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Red_Right.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Pink_Right.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Orange_Right.mgcontent
+Content/obj/DesktopGL/Content/Ghost_Blue_Right.mgcontent
+Content/obj/DesktopGL/Content/debug-rec.mgcontent
+Content/obj/DesktopGL/Content/coinsfx.mgcontent
+Content/obj/DesktopGL/Content/coin.mgcontent
+Content/obj/DesktopGL/Content/.mgstats
+Content/obj/DesktopGL/Content/.mgcontent
+Content/bin/DesktopGL/Content/stage.ogg
